--- a/front/html/index.html
+++ b/front/html/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+   
     <header>
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
@@ -83,6 +84,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/script.js"></script>
+  <script src="../js/index.js"></script>
   </body>
 </html>
